Official sisa detail, productlist belum 2. Promo 502 (Tebus Murah) 3. Promo 103 (Gratis Produk) 4. Promo 901 (Paket) 5. Product Search

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,13 +17,16 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".presentation.homepage.activity.ProductListActivity"
+            android:exported="false" />
+        <activity
             android:name=".presentation.homepage.activity.DetailOfficialStoreActivity"
             android:exported="false" />
         <activity
-            android:name=".presentation.authentication.activity.LoginActivity"
+            android:name=".presentation.homepage.activity.OfficialStoreActivity"
             android:exported="false" />
         <activity
-            android:name=".presentation.homepage.activity.OfficialStoreActivity"
+            android:name=".presentation.authentication.activity.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
