--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,12 @@ android {
 
 dependencies {
 
+//    image circle
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    //    button
+    implementation 'com.github.Omega-R:OmegaCenterIconButton:0.0.4@aar'
+
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
