--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -15,22 +15,26 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AlfagiftMini"
         android:usesCleartextTraffic="true"
-        tools:targetApi="31">
+        tools:targetApi="31" >
         <activity
-            android:name=".presentation.homepage.activity.productlist.ProductListHargaSpesialActivity"
+            android:name=".presentation.homepage.activity.MainActivity"
+            android:exported="false" >
+        </activity>
+        <activity
+            android:name=".presentation.homepage.components.activity.productlist.ProductListHargaSpesialActivity"
             android:exported="false" />
         <activity
-            android:name=".presentation.homepage.activity.officialstore.OfficialStoreActivity"
+            android:name=".presentation.homepage.components.activity.officialstore.OfficialStoreActivity"
             android:exported="false" />
         <activity
-            android:name=".presentation.homepage.activity.officialstore.AllOfficialStoreActivity"
+            android:name=".presentation.homepage.components.activity.officialstore.AllOfficialStoreActivity"
             android:exported="false" />
         <activity
-            android:name=".presentation.homepage.activity.productlist.ProductListGratisProductActivity"
+            android:name=".presentation.homepage.components.activity.productlist.ProductListGratisProductActivity"
             android:exported="false" />
         <activity
             android:name=".presentation.authentication.activity.LoginActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
