--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,9 @@ android {
 
 dependencies {
 
+//    image slider
+    implementation 'com.github.smarteist:autoimageslider:1.4.0'
+
 //    image circle
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
