--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,13 +39,29 @@ android {
 
 dependencies {
 
-//    image slider
+    // Kotlin
+    implementation("androidx.navigation:navigation-fragment-ktx:2.5.3")
+    implementation("androidx.navigation:navigation-ui-ktx:2.5.3")
+
+    // Feature module Support
+    implementation("androidx.navigation:navigation-dynamic-features-fragment:2.5.3")
+
+    // Testing Navigation
+    androidTestImplementation("androidx.navigation:navigation-testing:2.5.3")
+
+    // Jetpack Compose Integration
+    implementation("androidx.navigation:navigation-compose:2.5.3")
+
+    //OTP pin view
+    implementation "io.github.chaosleung:pinview:1.4.4"
+
+    //image slider
     implementation 'com.github.smarteist:autoimageslider:1.4.0'
 
-//    image circle
+    //image circle
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
-    //    button
+    //button
     implementation 'com.github.Omega-R:OmegaCenterIconButton:0.0.4@aar'
 
     //Retrofit
