--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,10 +17,10 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".RegisterActivity"
+            android:name=".presentation.authentication.activity.register.RegisterActivity"
             android:exported="false" />
         <activity
-            android:name=".AllBannerListActivity"
+            android:name=".presentation.homepage.components.activity.banner.AllBannerListActivity"
             android:exported="false" />
         <activity
             android:name=".presentation.homepage.activity.MainActivity"
