--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,9 @@ android {
 
 dependencies {
 
+    //    sticky scrollview
+    implementation 'com.github.amarjain07:StickyScrollView:1.0.3'
+
     // Kotlin
     implementation("androidx.navigation:navigation-fragment-ktx:2.5.3")
     implementation("androidx.navigation:navigation-ui-ktx:2.5.3")
