--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,16 +29,19 @@
             android:name=".presentation.homepage.components.activity.productlist.ProductListHargaSpesialActivity"
             android:exported="false" />
         <activity
-            android:name=".presentation.homepage.components.activity.officialstore.OfficialStoreActivity"
+            android:name=".presentation.authentication.activity.LoginActivity"
             android:exported="false" />
         <activity
             android:name=".presentation.homepage.components.activity.officialstore.AllOfficialStoreActivity"
             android:exported="false" />
         <activity
+            android:name=".presentation.homepage.components.activity.officialstore.DetailOfficialStoreActivity"
+            android:exported="false" />
+        <activity
             android:name=".presentation.homepage.components.activity.productlist.ProductListGratisProductActivity"
             android:exported="false" />
         <activity
-            android:name=".presentation.authentication.activity.LoginActivity"
+            android:name=".presentation.homepage.components.activity.officialstore.OfficialStoreActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
