--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         android:theme="@style/Theme.AlfagiftMini"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+
         <activity
             android:name=".presentation.authentication.activity.RegisterActivity"
             android:exported="true">
@@ -30,6 +31,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".presentation.homepage.components.activity.productlist.ProductListSearchProduk"
+            android:exported="false" />
+        <activity
+            android:name=".presentation.homepage.components.activity.productlist.ProductListTebusMurahActivity"
+            android:exported="false" />
         <activity
             android:name=".presentation.homepage.components.activity.productlist.ProductListPaketActivity"
             android:exported="false" />
