--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,12 +22,16 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".BannerPromoItemList"
+            android:name=".presentation.homepage.components.activity.banner.BannerPromoItemList"
             android:exported="false" />
         <activity
             android:name=".presentation.authentication.activity.RegisterActivity"
             android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".presentation.homepage.components.activity.productlist.ProductListSearchProduk"
@@ -64,11 +68,11 @@
             android:name=".presentation.authentication.activity.LoginActivity"
             android:exported="true">
 
-            <intent-filter>
+            <!--<intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            </intent-filter>-->
         </activity>
     </application>
 
