product list banner product syudah

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,9 @@ android {
 }
 
 dependencies {
+    // skeleton loading
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
+
     //    sticky scrollview
     implementation 'com.github.amarjain07:StickyScrollView:1.0.3'
 
