--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,13 +22,14 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".ProductDetailActivity"
+            android:exported="false" />
+        <activity
             android:name=".presentation.homepage.components.activity.banner.AllBannerListActivity"
             android:exported="false" />
         <activity
             android:name=".presentation.authentication.activity.RegisterActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".presentation.homepage.components.activity.banner.BannerPromoItemListActivity"
             android:exported="true">
@@ -70,15 +71,10 @@
             android:exported="false" />
         <activity
             android:name=".presentation.homepage.components.activity.productcategories.ProductCategoriesActivity"
-            android:exported="false">
-
-        </activity>
+            android:exported="false"></activity>
         <activity
             android:name=".presentation.homepage.components.activity.officialstore.OfficialStoreSearchActivity"
-            android:exported="false">
-
-
-        </activity>
+            android:exported="false"></activity>
     </application>
 
 </manifest>
