--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,7 +52,10 @@
             android:exported="false" />
         <activity
             android:name=".presentation.homepage.components.activity.productlist.ProductListHargaSpesialActivity"
-            android:exported="false" />
+            android:exported="true">
+
+
+        </activity>
         <activity
             android:name=".presentation.homepage.components.activity.officialstore.OfficialStoreActivity"
             android:exported="false" />
@@ -64,7 +67,8 @@
             android:exported="false" />
         <activity
             android:name=".presentation.homepage.components.activity.productlist.ProductListGratisProductActivity"
-            android:exported="false" />
+            android:exported="false" >
+        </activity>
         <activity
             android:name=".presentation.homepage.components.activity.productcategories.ProductCategoriesActivity"
             android:exported="false" >
