--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,11 +33,7 @@
         <activity
             android:name=".presentation.homepage.components.activity.banner.BannerPromoItemListActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".presentation.homepage.components.activity.productlist.ProductListTebusMurahActivity"
@@ -47,7 +43,13 @@
             android:exported="false" />
         <activity
             android:name=".presentation.authentication.activity.LoginActivity"
-            android:exported="false" />
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".presentation.homepage.activity.MainActivity"
             android:exported="false" />
