--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,19 +21,27 @@
         android:theme="@style/Theme.AlfagiftMini"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
-        <activity
-            android:name=".ProductDetailActivity"
-            android:exported="false" />
+
         <activity
             android:name=".presentation.homepage.components.activity.banner.AllBannerListActivity"
             android:exported="false" />
+
+        <activity
+            android:name=".presentation.homepage.components.activity.productdetail.ProductDetailActivity"
+            android:exported="false" />
         <activity
             android:name=".presentation.authentication.activity.RegisterActivity"
-            android:exported="true"></activity>
+            android:exported="true">
+
+        </activity>
         <activity
             android:name=".presentation.authentication.activity.LoginActivity"
             android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".presentation.homepage.components.activity.productlist.ProductListTebusMurahActivity"
@@ -42,19 +50,16 @@
             android:name=".presentation.homepage.components.activity.productlist.ProductListPaketActivity"
             android:exported="false" />
         <activity
-            android:name=".presentation.authentication.activity.LoginActivity"
+            android:name=".presentation.homepage.components.activity.banner.BannerPromoItemListActivity"
             android:exported="false" />
         <activity
             android:name=".presentation.homepage.activity.MainActivity"
             android:exported="false" />
         <activity
             android:name=".presentation.homepage.components.activity.productlist.ProductListHargaSpesialActivity"
-            android:exported="true">
-
-
-        </activity>
+            android:exported="false" />
         <activity
-            android:name=".presentation.homepage.components.activity.banner.BannerPromoItemListActivity"
+            android:name=".presentation.homepage.components.activity.officialstore.OfficialStoreActivity"
             android:exported="false" />
         <activity
             android:name=".presentation.homepage.components.activity.officialstore.AllOfficialStoreActivity"
@@ -67,14 +72,18 @@
             android:exported="false" />
         <activity
             android:name=".presentation.homepage.components.activity.productlist.ProductListGratisProductActivity"
-            android:exported="false" >
-        </activity>
+            android:exported="false" />
         <activity
             android:name=".presentation.homepage.components.activity.productcategories.ProductCategoriesActivity"
-            android:exported="false"></activity>
+            android:exported="false">
+
+        </activity>
         <activity
             android:name=".presentation.homepage.components.activity.officialstore.OfficialStoreSearchActivity"
-            android:exported="false"></activity>
+            android:exported="false">
+
+
+        </activity>
     </application>
 
 </manifest>
