--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,11 @@ android {
 }
 
 dependencies {
+    // room!
+    implementation 'androidx.room:room-runtime:2.5.1'
+    kapt 'androidx.room:room-compiler:2.5.1'
+    implementation "androidx.room:room-ktx:2.5.1"
+
     // skeleton loading
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
 
