--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,10 +22,10 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".AboutAppActivity"
+            android:name=".presentation.akun.AboutAppActivity"
             android:exported="false" />
         <activity
-            android:name=".EditAkunActivity"
+            android:name=".presentation.akun.EditAkunActivity"
             android:exported="false" />
         <activity
             android:name=".presentation.homepage.components.activity.banner.AllBannerListActivity"
