--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".SyaratKetentuanActivity"
+            android:exported="false" />
+        <activity
             android:name=".presentation.homepage.activity.SplashActivity"
             android:exported="true"
             android:screenOrientation="portrait"
@@ -35,11 +38,11 @@
         <activity
             android:name=".presentation.akun.AboutAppActivity"
             android:exported="false"
-            tools:ignore="LockedOrientationActivity"/>
+            tools:ignore="LockedOrientationActivity" />
         <activity
             android:name=".presentation.akun.EditAkunActivity"
             android:exported="false"
-            tools:ignore="LockedOrientationActivity"/>
+            tools:ignore="LockedOrientationActivity" />
         <activity
             android:name=".presentation.homepage.components.activity.productdetail.ProductDetailPromoGratisActivity"
             android:exported="false"
@@ -60,13 +63,12 @@
             tools:ignore="LockedOrientationActivity" />
         <activity
             android:name=".presentation.authentication.activity.RegisterActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".presentation.authentication.activity.LoginActivity"
             android:exported="true"
             android:screenOrientation="portrait"
-            tools:ignore="LockedOrientationActivity">
-        </activity>
+            tools:ignore="LockedOrientationActivity"></activity>
         <activity
             android:name=".presentation.homepage.components.activity.productlist.ProductListTebusMurahActivity"
             android:exported="false"
