--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,8 +22,10 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".SyaratKetentuanActivity"
-            android:exported="false" />
+            android:name=".presentation.homepage.components.activity.banner.SyaratKetentuanActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity"/>
         <activity
             android:name=".presentation.homepage.activity.SplashActivity"
             android:exported="true"
@@ -38,10 +40,12 @@
         <activity
             android:name=".presentation.akun.AboutAppActivity"
             android:exported="false"
+            android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity" />
         <activity
             android:name=".presentation.akun.EditAkunActivity"
             android:exported="false"
+            android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity" />
         <activity
             android:name=".presentation.homepage.components.activity.productdetail.ProductDetailPromoGratisActivity"
