--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ android {
 dependencies {
     // room!
     implementation 'androidx.room:room-runtime:2.5.1'
+    testImplementation 'junit:junit:4.12'
     kapt 'androidx.room:room-compiler:2.5.1'
     implementation "androidx.room:room-ktx:2.5.1"
 
@@ -114,6 +115,17 @@ dependencies {
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
+    testImplementation 'com.google.truth:truth:1.1.3'
+    androidTestImplementation 'com.google.truth:truth:1.1.3'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    testImplementation "org.mockito:mockito-core:4.10.0"
+    testImplementation "org.mockito:mockito-inline:4.10.0"
+    androidTestImplementation "org.mockito:mockito-core:4.10.0"
+    androidTestImplementation "org.mockito:mockito-inline:4.10.0"
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation('androidx.test.espresso:espresso-core:3.4.0')
+    androidTestImplementation('androidx.test:runner:1.4.0')
+    androidTestImplementation('androidx.test:rules:1.4.0')
+
 }
