--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,38 +1,24 @@
 name: CI
-on: 
+on:
   push:
-    branches: [master]
+    branches: [ master ]
   pull_request:
-    branches: [master]
-    
+    branches: [ master ]
   workflow_dispatch:
 
 jobs:
 
   unit-test:
-    runs-on: ubuntu-latest,
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout the code
         uses: actions/checkout@v2
 
-      - name: Run test
-        uses: ./gradlew test
+      - name: Run tests
+        run: ./gradlew test
 
-      - name: Upload the report
+      - name: Upload test report
         uses: actions/upload-artifact@v2
         with:
           name: unit_test_report
           path: app/build/reports/tests/testDebugUnitTest/
-
-  build:
-    needs: [unit-test]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Run a one-line script
-        run: echo Hello,world!
-      - name: Run a multi-line script
-        run: |
-          echo add other actions to build,
-          echo test, and deploy your project
-    
