--- a/build.gradle
+++ b/build.gradle
@@ -10,3 +10,13 @@ plugins {
     id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
     id("com.google.gms.google-services") version "4.3.15" apply false
 }
+//ext{
+//    FLAVOR_DIMENSION = "mode"
+//    DEV_API_URL = '"http://34.87.97.244:8082/"'
+//    DEV_APP_LABEL = "Mini Alfagift Dev"
+//    DEV_APP_ICON = "@mipmap/ic_launcher"
+//
+//    DEV_API_URL = '"http://34.87.97.244:8082/"'
+//    DEV_APP_LABEL = "Mini Alfagift PROD"
+//    DEV_APP_ICON = "@mipmap/ic_launcher"
+//}
